# idea-forge-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/chat-app/: README.md  pyproject.toml
examples/chat-app/.claude/: settings.json
examples/chat-app/.claude/agents/: forge-analyzer.md  forge-designer.md  forge-prd-writer.md  forge-tdd-runner.md
examples/chat-app/.claude/agents/forge/: forge-feedback.md  forge-quality.md  forge-sync.md
examples/chat-app/.claude/commands/forge/: analyze.md  build.md  dashboard.md  design.md  feedback.md  help.md  resume.md  sync.md  verify.md
examples/chat-app/.claude/hooks/: session_end.py  session_start.py  statusline.py
examples/chat-app/.claude/skills/forge-foundation/: SKILL.md
examples/chat-app/.claude/skills/forge-patterns/: SKILL.md
examples/chat-app/.forge/: config.json
examples/chat-app/.forge/agents/AUTH-001/: expert-backend.md  expert-frontend.md
examples/chat-app/.forge/agents/CHAT-001/: expert-security.md
examples/chat-app/.forge/dashboard/: package.json
examples/chat-app/.forge/dashboard/public/: index.html
examples/chat-app/.forge/progress/CHAT-001/: checkpoint.json.bak
examples/chat-app/.forge/reports/: CHAT-001-final.md
examples/chat-app/src/: main.py
examples/chat-app/src/api/: deps.py
examples/chat-app/src/models/: __init__.py  room.py
examples/chat-app/src/schemas/: auth.py  message.py
examples/chat-app/src/websocket/: status.py
examples/chat-app/tests/: test_auth.py  test_online_status.py  test_read_status.py  test_users.py  test_websocket.py
(+77 files in other folders)
